--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aws-lambda-powertools>=3.23.0",
+    "bandit>=1.9.2",
+    "dotenv>=0.9.9",
     "fastapi>=0.127.0",
     "httpx>=0.28.1",
     "mangum>=0.19.0",
